--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </article>
     </main>
     <footer>
-        Site criado por <a href="https://gustavoguanabara.github.io/"target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>. 
+        Site criado por <a href="https://gustavoguanabara.github.io/"target="_blank">Celso Ribas</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>. 
     </footer>
     
 </body>
